  IEntityDb.startTransaction() renamed to beginTransaction
  EntityModel.initializeEntityComboBoxModels return value changed from Map<Property, ComboBoxModel> to Map<Property.ForeignKeyProperty, EntityComboBoxModel>
  EntityModel.containsTableModel() added
  EntityModel.useStrictEditing renamed to useSelectForUpdate
  EntityModel.stSelectionFiltersDetail State field changed to boolean selectionFiltersDetail
  EntityModel.refreshEntityComboBoxModels() removed
  Configuration.USE_STRICT_EDIT_MODE renamed to USE_SELECT_FOR_UPDATE
  Demo package model renamed to domain
  private List<Entity> selectMany(final List<Property> properties, final List<EntityKey> primaryKeys) removed from EntityDbConnection
  EntityCriteria.isKeyCriteria() removed
  EntityRepository.EntityDefinition.entitySelectString renamed to selectColumnsString
  EntityRepository.entityInfo renamed to entityDefinitions
  EntityDbUtil.* moved to EntityUtil, EntitDbUtil removed, it introduced a dependency cycle between db.criteria and db
  EntityDbConnection, StringBuilder used throughout
  EntityDbConnection.set/getPoolTime() made package protected
  FrameworkUiUtil.createDateInputField() removed, unused
  TableSorter.evtTableHeaderShiftClick removed
  EntityTablePanel changed according to the above, using a MouseAdapter
  EntityTablePanel.toggleColumnFilterPanel() simplified according to the above
  IDatebase.DATABASE_TYPE_* renamed to *
  IEntityDb.selectAll(String entityID, boolean order) removed
  IEntityDb.getDependentEntities() renamed to selectDependentEntities
  EntityDbRemoteProvider, moved dbProxy initialization from getEntityDb() to initializeEntityDb()
  Type.SHORT_DATE renamed to DATE and LONG_DATE to TIMESTAMP
  EntityDbRemoteProvider, removed proxy since it wasn't used at all
  package framework.tools created, DomainGenerator moved there along with the profiling package
  testing package moved to tools