@@ -669,3 +669,4 @@
   EntityDbRemoteProvider, removed proxy since it wasn't used at all
   package framework.tools created, DomainGenerator moved there along with the profiling package
   testing package moved to tools
+  DomainGenerator improved, uses arguments and actually writes a file
